basic authentication support works
