# Openapi.json
@@ -243,6 +243,19 @@
           }
         }
       }
+    },
+    "securitySchemes":{
+      "basicAuth":{
+        "type":"http",
+        "scheme": "basic"
+      }
+      
     }
-  }
+  },
+  "security":[
+    {
+      "basicAuth": []
+    }
+  ]
+
 }
